# MQMyChat

./: .gitignore  CMakeLists.txt  MQMyChat.cpp  MQMyChat.h  MQMyChat.rc  MQMyChat.vcxproj  MQMyChat.vcxproj.filters  MyChatChannel.h  MyChatDatabase.cpp  MyChatDatabase.h  MyChatRenderer.cpp  MyChatRenderer.h  MyChatTLO.cpp  MyChatTLO.h  README.md
Documentation/: architecture.html  chat-routing.html  commands-tlo.html  database.html  extending.html  index.html  lifecycle.html  rendering.html  style.css
